test/library/standard/Sort/errors/errors-comparator.keyargs.good
errors-comparator.chpl:9: In function 'main':
errors-comparator.chpl:17: error: The comparator keyargs must implement either 'keyComparator', 'keyPartComparator', or 'relativeComparator' for int(64)
